feat: drag performance improvements

--- a/src/global.css
+++ b/src/global.css
@@ -21,3 +21,12 @@ root {
 :root.dark {
   color: #f3f3f3;
 }
+
+#frame {
+  /* Disable text higlighting */
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
