--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -8,7 +8,8 @@
 @layer base {
   html {
     font-family: "IBM Plex Sans", system-ui, sans-serif;
-    color: #333;
+    color: hsl(var(--foreground));
+  background-color: hsl(var(--background));
   }
 }
 
@@ -18,10 +19,6 @@ root {
   box-sizing: border-box;
 }
 
-:root.dark {
-  color: #f3f3f3;
-}
-
 #frame {
   /* Disable text higlighting */
   -webkit-user-select: none;
@@ -29,4 +26,65 @@ root {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+
+@layer base {
+  :root {
+    --font-sans: "IBM Plex Sans";
+    --font-mono: "IBM Plex Mono";
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+    --tooltip: 215 25% 27%;
+    --tooltip-foreground: 210 40% 98%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 40% 98%;
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+    --extra: 239 84% 67%;
+    --extra-foreground: 210 40% 98%;
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+    --radius: 0.75rem;
+    --bg-paper: linear-gradient(#e8e8e8 1px, transparent 0), linear-gradient(90deg, #e8e8e8 1px, transparent 0);
+    --bg-paper-size: 50px 50px;
+  }
+ 
+  .dark {
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+    --tooltip: 217.2 32.6% 17.5%;
+    --tooltip-foreground: 210 40% 98%;
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+    --extra: 234 89% 74%;
+    --extra-foreground: 210 40% 98%;
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 212.7 26.8% 83.9;
+    --bg-paper: linear-gradient(#475569 1px, transparent 0), linear-gradient(90deg, #475569 1px, #111827 0);
+  }
 }
