--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -11,6 +11,13 @@
     color: hsl(var(--foreground));
   background-color: hsl(var(--background));
   }
+
+  /* Remove the arrows in all input[type="number"] */
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 }
 
 root {
