--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -78,6 +78,8 @@ root {
   }
 
   .dark {
+    color-scheme: dark;
+
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
     --card: 222.2 84% 4.9%;
